--- a/survey.html
+++ b/survey.html
@@ -1,194 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>VistaGeomatics – Survey</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>VISTAGEOMATICS – Survey</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
-    :root {
-      --vista-blue: #1f9cf0;
-      --vista-blue-dark: #005a9c;
-      --text-main: #ffffff;
+    :root{
+      --bg:#020509;
+      --text:rgba(255,255,255,0.96);
+      --muted:rgba(255,255,255,0.72);
+      --vista-blue:#1f9cf0;
+      --glass:rgba(10,16,26,0.55);
+      --stroke:rgba(255,255,255,0.12);
+      --shadow:0 30px 70px rgba(0,0,0,0.80);
+      --radius:26px;
     }
 
-    * { box-sizing: border-box; }
-
-    body {
-      margin: 0;
-      min-height: 100vh;
-      font-family: "Inter", sans-serif;
-      color: var(--text-main);
-      background-color: #020509;
-      background-image: url("Survey.png");
-      background-size: contain;
-      background-position: center top;
-      background-repeat: no-repeat;
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; margin:0; }
+    body{
+      font-family:Inter,system-ui,sans-serif;
+      background:var(--bg);
+      color:var(--text);
+      overflow-x:hidden;
     }
 
-    .overlay {
-      position: fixed;
-      inset: 0;
-      background: radial-gradient(circle at top, rgba(0,0,0,0.45), rgba(0,0,0,0.92));
-      display: flex;
-      align-items: flex-start;
-      justify-content: center;
-      padding: 24px;
-    }
+    .intro{position:fixed; inset:0; z-index:120; background:#000; transition:opacity .55s ease, visibility .55s ease;}
+    .intro.hide{ opacity:0; visibility:hidden; }
+    .intro video{ width:100%; height:100%; object-fit:cover; }
+    .intro .skip{ position:absolute; bottom:22px; left:50%; transform:translateX(-50%); font-size:.75rem; letter-spacing:.15em; opacity:.65; text-transform:uppercase; }
 
-    .card {
-      margin-top: 40px;
-      max-width: 960px;
-      width: 100%;
-      background: rgba(5, 10, 18, 0.92);
-      border-radius: 24px;
-      padding: 28px 26px 22px;
-      box-shadow: 0 24px 60px rgba(0,0,0,0.9);
-      border: 1px solid rgba(255,255,255,0.08);
-      backdrop-filter: blur(12px);
-    }
+    .bg-video video{ position:fixed; inset:0; width:100%; height:100%; object-fit:cover; filter:brightness(.85) contrast(1.05); z-index:-3; }
+    .bg-overlay{ position:fixed; inset:0; z-index:-2; background:linear-gradient(to bottom,rgba(0,0,0,.25),rgba(0,0,0,.8)); }
 
-    .header {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 12px;
-      align-items: baseline;
-      margin-bottom: 18px;
-    }
+    canvas#trail{ position:fixed; inset:0; pointer-events:none; z-index:50; }
 
-    .title-block {
-      max-width: 70%;
-    }
+    .wrap{ min-height:100vh; display:flex; align-items:center; justify-content:center; padding:20px; }
+    .card{ width:min(920px,100%); background:var(--glass); backdrop-filter:blur(14px); border-radius:var(--radius); border:1px solid var(--stroke); box-shadow:var(--shadow); overflow:hidden; }
+    .card-head{ padding:24px; border-bottom:1px solid var(--stroke); display:flex; justify-content:space-between; align-items:flex-start; }
 
-    .title {
-      font-family: "Montserrat", sans-serif;
-      font-size: 1.4rem;
-      letter-spacing: 0.18em;
-      text-transform: uppercase;
-      margin-bottom: 4px;
-    }
+    .brand{ font-family:Montserrat,sans-serif; letter-spacing:.22em; text-transform:uppercase; font-size:1.1rem; }
+    .brand .vista{ font-weight:700; }
+    .brand .geomatics{ font-weight:400; }
 
-    .subtitle {
-      font-size: 0.9rem;
-      color: rgba(255,255,255,0.78);
-      margin-bottom: 8px;
-    }
+    .back{ color:#fff; text-decoration:none; font-size:.75rem; letter-spacing:.15em; text-transform:uppercase; opacity:.8; }
 
-    .divider {
-      width: 130px;
-      height: 2px;
-      border-radius: 999px;
-      background: linear-gradient(120deg, #1f9cf0, #43b0ff, #1f9cf0);
-      box-shadow: 0 0 10px rgba(31,156,240,0.8);
-    }
+    .card-body{ padding:22px; }
 
-    .back-link {
-      font-size: 0.8rem;
-      color: rgba(255,255,255,0.7);
-      text-decoration: none;
-      border-radius: 999px;
-      padding: 6px 14px;
-      border: 1px solid rgba(255,255,255,0.25);
-      background: rgba(0,0,0,0.35);
-      letter-spacing: 0.14em;
-      text-transform: uppercase;
-    }
-    .back-link:hover { background: rgba(255,255,255,0.08); }
+    .btn-grid{ display:grid; grid-template-columns:repeat(3,1fr); gap:16px; }
+    @media(max-width:760px){ .btn-grid{grid-template-columns:repeat(2,1fr);} }
+    @media(max-width:520px){ .btn-grid{grid-template-columns:1fr;} }
 
-    .section-title {
-      font-size: 0.85rem;
-      font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
-      margin-bottom: 10px;
-      color: rgba(255,255,255,0.9);
-    }
-
-    .link-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 10px;
-    }
-
-    .link-card {
-      padding: 12px 14px;
-      border-radius: 14px;
-      background: rgba(15, 23, 42, 0.92);
-      border: 1px solid rgba(148, 163, 184, 0.45);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      font-weight: 600;
-      font-size: 0.85rem;
-      text-transform: uppercase;
-      letter-spacing: 0.06em;
-      transition: transform 0.15s ease, box-shadow 0.15s ease, border-color 0.15s ease, background 0.15s ease;
-    }
-
-    .link-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 18px 40px rgba(0,0,0,0.95);
-      border-color: rgba(56, 189, 248, 0.9);
-      background: radial-gradient(circle at top left, rgba(56,189,248,0.16), rgba(15,23,42,0.96));
-    }
-
-    a { color: inherit; text-decoration: none; }
-
-    .footer-brand {
-      margin-top: 20px;
-      text-align: center;
-      font-family: "Montserrat", sans-serif;
-      font-size: 0.75rem;
-      letter-spacing: 0.18em;
-      text-transform: uppercase;
-      color: rgba(255,255,255,0.6);
-    }
-    .footer-brand .vista { font-weight: 700; }
-    .footer-brand .geomatics { font-weight: 400; }
-
-    @media (max-width: 640px) {
-      .card { padding: 22px 18px 18px; }
-      .title-block { max-width: 100%; }
-    }
+    .btn{ position:relative; padding:18px; border-radius:18px; border:1px solid rgba(255,255,255,.14); background:rgba(0,0,0,.25); color:#fff; text-decoration:none; display:flex; justify-content:space-between; align-items:center; font-weight:800; letter-spacing:.14em; text-transform:uppercase; min-height:66px; overflow:hidden; backdrop-filter:blur(10px); transition:transform .2s ease,border-color .2s ease,box-shadow .2s ease; }
+    .btn:hover{ transform:translateY(-2px); border-color:var(--vista-blue); box-shadow:0 22px 50px rgba(0,0,0,0.8); }
   </style>
 </head>
 <body>
-<div class="overlay">
-  <div class="card">
-    <header class="header">
-      <div class="title-block">
-        <div class="title">Survey</div>
-        <div class="subtitle">Internal survey forms and reference documents.</div>
-        <div class="divider"></div>
-      </div>
-      <a href="index.html" class="back-link">Back</a>
-    </header>
-
-    <section>
-      <div class="section-title">Forms &amp; References</div>
-      <div class="link-grid">
-        <a class="link-card" href="https://vistageomatics.github.io/evidence-report/" target="_blank" rel="noopener">
-          EVIDENCE REPORT
-        </a>
-
-        <a class="link-card" href="https://drive.google.com/file/d/18eJBzR0rHdzwa35nDwQtXxl1Z24zhb67/view?usp=sharing" target="_blank" rel="noopener">
-          ALBERTA ELECTRICAL UTILITY CODE
-        </a>
-
-        <a class="link-card" href="https://drive.google.com/file/d/17YKBb5GKTefKanFOsrPcbMUyrr8i9znI/view?usp=sharing" target="_blank" rel="noopener">
-          CALIBRATION OF SURVEY EQUIPMENT
-        </a>
+  <div class="intro" id="intro"><video id="surveyIntro" autoplay muted playsinline><source src="survey.mp4" type="video/mp4"></video><div class="skip">Tap twice to skip</div></div>
+  <div class="bg-video"><video autoplay muted loop playsinline><source src="Glitch.mov" type="video/mp4"></video></div>
+  <div class="bg-overlay"></div>
+  <canvas id="trail"></canvas>
+  <main class="wrap">
+    <section class="card">
+      <header class="card-head">
+        <div class="brand"><span class="vista">VISTA</span><span class="geomatics">GEOMATICS</span></div>
+        <a class="back" href="index.html">Back</a>
+      </header>
+      <div class="card-body">
+        <div class="btn-grid">
+          <a class="btn" href="https://vistageomatics.github.io/evidence-report/" target="_blank">Evidence Report →</a>
+          <a class="btn" href="https://drive.google.com/file/d/17YKBb5GKTefKanFOsrPcbMUyrr8i9znI/view" target="_blank">Calibration →</a>
+          <a class="btn" href="https://drive.google.com/file/d/18eJBzR0rHdzwa35nDwQtXxl1Z24zhb67/view?pli=1" target="_blank">Utility Code →</a>
+          <a class="btn" href="drone.html">Drone →</a>
+        </div>
       </div>
     </section>
-
-    <div class="footer-brand">
-      <span class="vista">VISTA</span><span class="geomatics">GEOMATICS</span>
-    </div>
-  </div>
-</div>
+  </main>
+<script>(function(){const intro=document.getElementById("intro");const vid=document.getElementById("surveyIntro");const KEY="vg_survey_intro_seen_final";if(sessionStorage.getItem(KEY)){intro.classList.add("hide");return;}sessionStorage.setItem(KEY,"1");let taps=0;document.addEventListener("click",()=>{taps++;setTimeout(()=>taps=0,300);if(taps>=2){intro.classList.add("hide");vid.pause();}});setTimeout(()=>intro.classList.add("hide"),5000);})();</script>
 </body>
 </html>
